@@ -1,3 +1,9 @@
+2023-07-24T12:16:21Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5644689082 # 3518
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-24
+* notice: query file size: 26017
+* notice: accum prev / next / diff: re vi: 0 2724 / 0 2727 / +0 +3
+
 2023-07-24T00:49:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/5639551768 # 3515
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-07-24
